# LanguagePlus

./: .gitignore  CMakeLists.txt  qrc.qrc  resource.rc
Language+/: About.md
include/: config.h.in  container.hpp  executer.hpp  filereader.hpp  lex.hpp  mqwindow.hpp  parser.hpp  pluslanguage.hpp  qtest.hpp  typeTable.hpp
src/: container.cpp  executer.cpp  filereader.cpp  lex.cpp  main.cpp  mqwindow.cpp  parser.cpp  qtest.cpp
test/data/: src.pl
